# Legacy-GM8Emulator

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE.md  README.md  alarm.sh  gib  notes.txt  rebuild.cmd  rebuild.sh
GM8Emulator/: AssetManager.hpp  Assets.cpp  Assets.hpp  CREnums.hpp  CRExpression.hpp  CodeAction.cpp  CodeAction.hpp  CodeActionManager.cpp  CodeActionManager.hpp  CodeRunner.cpp  CodeRunner.hpp  CodeRunnerCompiling.cpp  CodeRunnerGMLFunctions.cpp  CodeRunnerRunning.cpp  Collision.cpp  Collision.hpp  GM8Emulator.sln  GM8Emulator.vcxproj  GM8Emulator.vcxproj.filters  Game.cpp  Game.hpp  GameFrame.cpp  GameRenderer.cpp  GameRenderer.hpp  GlobalValues.hpp  InputHandler.cpp  InputHandler.hpp  Instance.hpp  InstanceList.cpp  InstanceList.hpp  RNG.cpp  RNG.hpp  StreamUtil.cpp  StreamUtil.hpp  main.cpp  test.cpp
GM8Emulator/glfw-3.2.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
GM8Emulator/glfw-3.2.1/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
GM8Emulator/glfw-3.2.1/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters
GM8Emulator/glfw-3.2.1/src/Debug/: glfw3.lib
GM8Emulator/glfw-3.2.1/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cmake_install.cmake  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  monitors.vcxproj.filters  msaa.vcxproj  msaa.vcxproj.filters  reopen.vcxproj  reopen.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  tearing.vcxproj  tearing.vcxproj.filters  threads.vcxproj  threads.vcxproj.filters  timeout.vcxproj  timeout.vcxproj.filters  title.vcxproj  title.vcxproj.filters  windows.vcxproj  windows.vcxproj.filters
GM8Emulator/x64/Debug/: codeaction.obj.enc  main.obj.enc
GM8Emulator/zlib/: zlib.lib  zlib_x64.lib
src/: Alarm.cpp  Alarm.hpp  AssetManager.cpp  AssetManager.hpp  Assets.cpp  Assets.hpp  CMakeLists.txt  CREnums.hpp  CRGMLType.hpp  CRInterpretation.cpp  CRInterpretation.hpp  CodeActionManager.cpp  CodeActionManager.hpp  CodeRunner.cpp  CodeRunner.hpp  CodeRunnerCompiling.cpp  CodeRunnerGMLFunctions.cpp  CodeRunnerRunning.cpp  Collision.cpp  Collision.hpp  Constants.hpp  DeathTime  File.cpp  File.hpp  Game.cpp  Game.hpp  GameFrame.cpp  GamePrivateGlobals.hpp  GameRenderer.cpp  GameRenderer.hpp  GameSettings.hpp  GlobalValues.hpp  InputHandler.cpp  InputHandler.hpp  Instance.hpp  InstanceList.cpp  InstanceList.hpp  RNG.cpp  RNG.hpp  Renderer.cpp  (+8 more)
src/Compiler/: CRRuntime.cpp  CRRuntime.hpp  Compiled.cpp  Compiled.hpp  Constants.hxx  Interpreter.cpp  Interpreter.hpp  Tokenizer.cxx  Tokenizer.hxx  TokenizerLUT.cxx  TokenizerUnitTest.cxx
src/Compiler/hey_adam_implement_this/: Tokenizer.cxx  Tokenizer.hxx  TokenizerLUT.cxx  TokenizerUnitTest.cxx
vs_deps/zlib/: info.txt
vs_deps/zlib/lib/: zlib.lib  zlib64.lib
